fix lang on mobile

--- a/css/app.css
+++ b/css/app.css
@@ -1130,6 +1130,10 @@
         display: none;
     }
 
+    .lang-wrap {
+        width: 50px;
+    }
+
 
     .about .section-title {
         width: 100%;
